# epub2go-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
src/: gunicorn.py  manage.py
src/core/: views.py
src/core/management/commands/: getbooks.py
src/epub2go_web/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
src/epub2go_web/static/: script.js  site.webmanifest  styles.css
src/epub2go_web/templates/: home.html  index.html  waiting.html
