[project]
name = "epub2go-py-web"
version = "2.0"
description = "Web Interface to epub2go.py"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "django>=5.1.6",
    "epub2go",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "pywatchman>=2.0.0",
    "redis>=5.2.1",
]

[tool.uv.sources]
epub2go = { git = "https://github.com/eneller/epub2go.py" }
