[project]
name = "epub2go-py-web"
version = "2.1"
description = "Web Interface to epub2go.py"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "django>=5.1.6",
    "django-environ>=0.12.0",
    "epub2go",
    "gunicorn>=23.0.0",
    "redis>=5.2.1",
]

[tool.uv.sources]
epub2go = { git = "https://github.com/eneller/epub2go.py" }

[tool.sonar]
# must be unique in a given SonarQube Server/SonarQube Cloud instance
projectKey="epub2go_web"

[dependency-groups]
dev = [
    "pysonar>=1.0.2.1722",
    "pywatchman>=3.0.0",
]
