[project]
name = "epub2go-py-web"
version = "2.1"
description = "Web Interface to epub2go.py"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "django>=5.1.6",
    "django-environ>=0.12.0",
    "epub2go",
    "gunicorn>=23.0.0",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-distro>=0.58b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-instrumentation-asgi==0.58b0",
    "opentelemetry-instrumentation-asyncio==0.58b0",
    "opentelemetry-instrumentation-celery==0.58b0",
    "opentelemetry-instrumentation-click==0.58b0",
    "opentelemetry-instrumentation-dbapi==0.58b0",
    "opentelemetry-instrumentation-django==0.58b0",
    "opentelemetry-instrumentation-grpc==0.58b0",
    "opentelemetry-instrumentation-logging==0.58b0",
    "opentelemetry-instrumentation-redis==0.58b0",
    "opentelemetry-instrumentation-requests==0.58b0",
    "opentelemetry-instrumentation-sqlite3==0.58b0",
    "opentelemetry-instrumentation-threading==0.58b0",
    "opentelemetry-instrumentation-urllib==0.58b0",
    "opentelemetry-instrumentation-urllib3==0.58b0",
    "opentelemetry-instrumentation-wsgi==0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "redis>=5.2.1",
]

[tool.uv.sources]
epub2go = { git = "https://github.com/eneller/epub2go.py" }

[tool.sonar]
# must be unique in a given SonarQube Server/SonarQube Cloud instance
projectKey="epub2go_web"

[dependency-groups]
dev = [
    "pysonar>=1.0.2.1722",
    "pywatchman>=3.0.0",
]
